Fix code overflow

--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -47,6 +47,7 @@ code {
     color: black;
     background-color: var(--code-background);
     padding: 0 0.1em;
+    overflow-x: auto;
 }
 
 pre {
